# ai_startup

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  README.md  compose.yaml  main.py  phase_2.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  config.json
.planning/research/: BOOKING_PATTERNS.md  DASHBOARD.md  OPENAI.md  TELEGRAM.md
alembic/: env.py
alembic/versions/: 20260406_0001_phase1_foundation.py  20260410_0002_phase4_telegram_config.py
app/: __init__.py  api.py  config.py  db.py  logging_utils.py  main.py  models.py  seed.py
app/bot/: copy.py  dispatcher.py  keyboards.py  polling.py  router.py  states.py
app/owner/: __init__.py  render.py  router.py
app/services/: auth_service.py  booking_service.py  bot_registry.py  clinic_service.py  crypto_service.py  dashboard_service.py  idempotency_service.py  message_service.py  normalization.py  onboarding_service.py  openai_service.py  patient_service.py  redis_service.py  telegram_config_service.py
app/static/: app.css
docs/: index.html
landing/: style.css
logs/: pre_tool_use.json
tests/: test_booking_service.py  test_bot_router.py  test_normalization.py  test_owner_router.py  test_redis_runtime.py  test_webhook_multi_clinic.py
